# masters-report

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CITATION.cff  CONTRIBUTING.md  LICENSE  LICENSE-docs  Manifest.toml  Pipfile  Project.toml  README.md  audit-command-output.txt  citations.bib  deliverable-sha256.txt  docusaurus.config.js  final-report.tex  masters_report_review.md  next-round-todo.patch  package-lock.json  package.json  pyproject.toml  references.bib  report-TODO.md  sidebars.js  stenotic-hemodynamics-TODO.md
appendices/: acronyms.tex  code-and-ai-use.tex  continuum-derivation-details.tex  continuum-physiology-background.tex  domain-notation.tex  index.tex  mathematical-foundations.tex  mathematical-notation.tex  model-hierarchy-background-details.tex  ns-coordinate-energy-details.tex  numerical-methods-details.tex
docs/: artifact-policy.md  benchmark-pipeline.md  executive-assessment.md  publication-readiness.md  revision-claim-ledger.md  revision-release-gates.md
editorial/: canonical_rq_answers.md  manuscript_build.env  numerical_ledger.yaml  open_issues.yaml  run_state.yaml  section_plan.yaml  terminology_ledger.yaml
frontmatter/: abstract.tex  keywords.tex  title.tex
notebooks/: p_h_refinement_demo.ipynb
preamble/: bibliography.tex  hyperref.tex  macros.tex  notation-macros.tex  packages.tex
references/: AGENTS.md  README.md  references.bib  source-inventory.tsv
report/: TODO.md  final-report.tex
reproducibility/: release-manifest.json
scripts/: audit_references.py  audit_tex_preamble.py  build_lit_review_depth.py  julia-release  (+8 more)
(+483 files in other folders)
