[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "research-hemodynamics"
version = "0.1.0"
requires-python = ">=3.13,<3.14"
description = "Self-contained Python CLI for CanicExtended1D hemodynamics descriptors."
dependencies = [
    "numpy",
    "typer==0.26.6",
]

[project.optional-dependencies]
tests = ["pytest"]

[project.scripts]
research-hemodynamics = "research_hemodynamics.cli:main"

[tool.setuptools]
package-dir = {"" = "python/src"}

[tool.setuptools.packages.find]
where = ["python/src"]

[tool.pytest.ini_options]
pythonpath = ["python/src"]

[tool.black]
line-length = 120
target-version = ["py313"]

[tool.isort]
profile = "black"
